--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library of general-purpose cellular automaton functionality",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node src/test.js",
     "start": "echo \"Error: no start script specified\" && exit 1"
   },
   "author": "Avery Hiebert",
