--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A library of general-purpose cellular automaton functionality",
   "main": "src/main.js",
   "scripts": {
-    "test": "node src/test.js",
+    "test": "mocha",
     "start": "echo \"Error: no start script specified\" && exit 1"
   },
   "author": "Avery Hiebert",
   "license": "Not licensed for public use (yet)",
   "devDependencies": {
-    "jsdoc": "^3.5.3"
+    "jsdoc": "^3.5.3",
+    "mocha": "^3.4.2"
   }
 }
