--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A library of general-purpose cellular automaton functionality",
   "main": "src/main.js",
   "scripts": {
+    "documentation": "node_modules/.bin/jsdoc -c ./docs/conf.json",
     "test": "istanbul cover _mocha -- -R spec",
     "start": "echo \"Error: no start script specified\" && exit 1"
   },
