Rename to 'cellerity' and update documentation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cellulite",
+  "name": "cellerity",
   "version": "0.0.1",
   "description": "A library of general-purpose cellular automaton functionality",
   "main": "src/main.js",
