--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
   "name": "cellerity",
-  "version": "0.0.1",
-  "engines": {"node":">=4.2.6"},
+  "version": "0.0.2",
+  "engines": {
+    "node": ">=4.2.6"
+  },
   "description": "Extensible general-purpose cellular automata",
-  "keywords":["cellular","automata","automaton","Game of Life","lifelike",
-        "Conway","procedural","generation","simulation"],
+  "keywords": [
+    "cellular",
+    "automata",
+    "automaton",
+    "Game of Life",
+    "lifelike",
+    "Conway",
+    "procedural",
+    "generation",
+    "simulation"
+  ],
   "main": "src/main.js",
   "scripts": {
     "documentation": "node_modules/.bin/jsdoc -c ./docs/conf.json",
     "test": "istanbul cover _mocha -- -R spec",
     "start": "echo \"Error: no start script specified\" && exit 1"
   },
-  "directories":{"doc":"./docs/htmlDocs"},
-  "author": {"name":"Avery Hiebert"},
+  "directories": {
+    "doc": "./docs/htmlDocs"
+  },
+  "author": {
+    "name": "Avery Hiebert"
+  },
   "license": "MIT",
-  "repository":{
-    "type":"git",
-    "url":"https://github.com/averyhiebert/cellerity.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/averyhiebert/cellerity.git"
   },
   "devDependencies": {
     "istanbul": "^0.4.5",
