--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "main": "src/main.js",
   "scripts": {
     "documentation": "node_modules/.bin/jsdoc -c ./docs/conf.json",
+    "build": "browserify src/main.js --standalone cellerity -o \"dist/cellerity-browser-\"$npm_package_version\".js\"",
     "test": "istanbul cover _mocha -- -R spec",
     "start": "echo \"Error: no start script specified\" && exit 1"
   },
@@ -34,8 +35,10 @@
     "url": "https://github.com/averyhiebert/cellerity.git"
   },
   "devDependencies": {
+    "browserify": "^14.4.0",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.5.3",
     "mocha": "^3.4.2"
-  }
+  },
+  "dependencies": {}
 }
